Handle click out of reply modal. Fix p style on smaller screen

--- a/components/mdx.module.css
+++ b/components/mdx.module.css
@@ -5,3 +5,9 @@
 .root :global(.react-tweet-theme) a {
   font-weight: 300;
 }
+
+@media  screen and (max-width: 768px) {
+.root p {
+    margin-bottom: 1rem;
+  }
+}
